--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,7 @@ html, body {
     background-color: transparent;
     border: none;
     font-size: 16px;
-    color: red;
+    color: rgba(255, 99, 132, 1);
     transform: rotate(45deg);
 }
 
